[package]
name = "cuda_msm"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "~0.3.11"
sppark = { git = "https://github.com/supranational/sppark" }
rand = "^0"
rand_chacha = "^0"
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-bls12-381 = { version = "0.3.0" }

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }


[[bench]]
name = "msm"
harness = false
